[package]
name = "rust-polkadot-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version ="1.21.0", features = ["rt", "rt-multi-thread", "macros"] }
subxt = "0.24.0"
tracing-subscriber = "0.3.15"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
ticker = "0.1.1"

sp-core = "6.0.0"
tiny-bip39 = "1.0.0"
